# whisper.cpp

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  common-pw.cpp  common-pw.h
examples/stream-pw/: CMakeLists.txt
